Remove --enable-preview compiler arg