@@ -90,9 +90,6 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg> <!-- TODO: Remove on next Java release -->
-                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
